# emulator

./: CMakeLists.txt  README.md  prompt.txt
include/: CPU.hpp  CommandHandler.hpp  Emulator.hpp  Memory.hpp  Registers.hpp  Screen.hpp
src/: CPU.cpp  CommandHandler.cpp  Emulator.cpp  Memory.cpp  Registers.cpp  Screen.cpp  main.cpp
